Добавил мигание акциям + снежинку на меню про НГ

--- a/_dev/tmpl/abhazia-tour.html
+++ b/_dev/tmpl/abhazia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/abhazia-1.jpg" alt="Абхазия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/abhazia-2.jpg" alt="Абхазия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/abhazia-3.jpg" alt="Абхазия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/abhazia-4.jpg" alt="Абхазия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/abhazia-1.jpg" alt="Абхазия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/abhazia-2.jpg" alt="Абхазия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/abhazia-3.jpg" alt="Абхазия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/abhazia-4.jpg" alt="Абхазия"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
