--- a/_dev/tmpl/armenia-tour.html
+++ b/_dev/tmpl/armenia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/armenia-1.jpg" alt="Армения"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/armenia-2.jpg" alt="Армения"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/armenia-3.jpg" alt="Армения"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/armenia-4.jpg" alt="Армения"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/armenia-1.jpg" alt="Армения"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/armenia-2.jpg" alt="Армения"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/armenia-3.jpg" alt="Армения"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/armenia-4.jpg" alt="Армения"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
