--- a/_dev/tmpl/azerbadjan-tour.html
+++ b/_dev/tmpl/azerbadjan-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/azerbadjan-1.jpg" alt="Азербайджан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/azerbadjan-2.jpg" alt="Азербайджан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/azerbadjan-3.jpg" alt="Азербайджан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/azerbadjan-4.jpg" alt="Азербайджан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/azerbadjan-1.jpg" alt="Азербайджан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/azerbadjan-2.jpg" alt="Азербайджан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/azerbadjan-3.jpg" alt="Азербайджан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/azerbadjan-4.jpg" alt="Азербайджан"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
