--- a/_dev/tmpl/belarussia-tour.html
+++ b/_dev/tmpl/belarussia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/belarussia-1.jpg" alt="Белоруссия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/belarussia-2.jpg" alt="Белоруссия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/belarussia-3.jpg" alt="Белоруссия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/belarussia-4.jpg" alt="Белоруссия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/belarussia-1.jpg" alt="Белоруссия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/belarussia-2.jpg" alt="Белоруссия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/belarussia-3.jpg" alt="Белоруссия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/belarussia-4.jpg" alt="Белоруссия"></div>
 
         </div>
         <div class="row">
