--- a/_dev/tmpl/cruises-perm.html
+++ b/_dev/tmpl/cruises-perm.html
@@ -32,13 +32,13 @@
         </div>
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <img src="img/cruises-1.jpg" alt="Круизы из Перми 2017">
+                <img src="/img/cruises-1.jpg" alt="Круизы из Перми 2017">
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src="img/cruises-2.jpg" alt="Круизы из Перми 2017">
+                <img src="/img/cruises-2.jpg" alt="Круизы из Перми 2017">
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src="img/cruises-3.jpg" alt="Круизы из Перми 2017">
+                <img src="/img/cruises-3.jpg" alt="Круизы из Перми 2017">
             </div>
         </div>
 
@@ -52,7 +52,7 @@
                 </p>
                 <p class="accent">СХЕМА ТЕПЛОХОДА «МИХАИЛ КУТУЗОВ»</p>
                 <p>
-                    <img src="img/shema-kutuzov.jpg" alt="СХЕМА ТЕПЛОХОДА «МИХАИЛ КУТУЗОВ»">
+                    <img src="/img/shema-kutuzov.jpg" alt="СХЕМА ТЕПЛОХОДА «МИХАИЛ КУТУЗОВ»">
                 </p>
                 <hr>
                 <h2 class="section-title">Теплоход «Владимир Маяковский»</h2>
@@ -62,7 +62,7 @@
                 </p>
                 <p class="accent">СХЕМА ТЕПЛОХОДА «ВЛАДИМИР МАЯКОВСКИЙ»</p>
                 <p>
-                    <img src="img/shema-mayak.jpg" alt="СХЕМА ТЕПЛОХОДА «ВЛАДИМИР МАЯКОВСКИЙ»">
+                    <img src="/img/shema-mayak.jpg" alt="СХЕМА ТЕПЛОХОДА «ВЛАДИМИР МАЯКОВСКИЙ»">
                 </p>
 
                 <hr>
@@ -73,7 +73,7 @@
                 </p>
                 <p class="accent">СХЕМА ТЕПЛОХОДА «ПАВЕЛ БАЖОВ»</p>
                 <p>
-                    <img src="img/shema-bajov.jpg" alt="СХЕМА ТЕПЛОХОДА «ПАВЕЛ БАЖОВ»">
+                    <img src="/img/shema-bajov.jpg" alt="СХЕМА ТЕПЛОХОДА «ПАВЕЛ БАЖОВ»">
                 </p>
 
                 <hr>
@@ -84,7 +84,7 @@
                 </p>
                 <p class="accent">СХЕМА ТЕПЛОХОДА «КАПИТАН ПУШКАРЁВ»</p>
                 <p>
-                    <img src="img/shema-pushkarev.jpg" alt="СХЕМА ТЕПЛОХОДА «ПАВЕЛ БАЖОВ»">
+                    <img src="/img/shema-pushkarev.jpg" alt="СХЕМА ТЕПЛОХОДА «ПАВЕЛ БАЖОВ»">
                 </p>
             </div>
         </div>
