--- a/_dev/tmpl/dominikana-tour.html
+++ b/_dev/tmpl/dominikana-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/dominikana-1.jpg" alt="Доминикана"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/dominikana-2.jpg" alt="Доминикана"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/dominikana-3.jpg" alt="Доминикана"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/dominikana-4.jpg" alt="Доминикана"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/dominikana-1.jpg" alt="Доминикана"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/dominikana-2.jpg" alt="Доминикана"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/dominikana-3.jpg" alt="Доминикана"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/dominikana-4.jpg" alt="Доминикана"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
