--- a/_dev/tmpl/georgia-tour.html
+++ b/_dev/tmpl/georgia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/georgia-1.jpg" alt="Грузия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/georgia-2.jpg" alt="Грузия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/georgia-3.jpg" alt="Грузия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/georgia-4.jpg" alt="Грузия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/georgia-1.jpg" alt="Грузия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/georgia-2.jpg" alt="Грузия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/georgia-3.jpg" alt="Грузия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/georgia-4.jpg" alt="Грузия"></div>
             </div>
         <div class="row">
             <div class="col-md-12">
