--- a/_dev/tmpl/gold-ring-tour.html
+++ b/_dev/tmpl/gold-ring-tour.html
@@ -28,7 +28,7 @@
                     Золотое Кольцо-это один из&nbsp;самых знаменитых туристических маршрутов России. Маршрут был открыт несколько десятилетий назад и&nbsp;включает в&nbsp;себя группу городов, каждый из&nbsp;которых имеет свою историю и&nbsp;является памятником архитектуры. Маршрут подходит для любого времени года. Мы&nbsp;предлагаем Вам окунуться в&nbsp;историю Древней Руси, познакомиться с&nbsp;бытом и&nbsp;культурой старейших городов России, ощутить на&nbsp;себе местный колорит.
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/gold-ring.jpg" alt="Золотое кольцо России"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/gold-ring.jpg" alt="Золотое кольцо России"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
