--- a/_dev/tmpl/inc/footer.html
+++ b/_dev/tmpl/inc/footer.html
@@ -51,5 +51,6 @@
 
 <script src="libs/jquery.js"></script>
 <script src="libs/swiper.jquery.min.js"></script>
+<script src="libs/magnific.min.js"></script>
 <script src="libs/parallax.min.js"></script>
 <script src="js/main.js"></script>
