--- a/_dev/tmpl/india-tour.html
+++ b/_dev/tmpl/india-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/india-1.jpg" alt="Индия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/india-2.jpg" alt="Индия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/india-3.jpg" alt="Индия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/india-4.jpg" alt="Индия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/india-1.jpg" alt="Индия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/india-2.jpg" alt="Индия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/india-3.jpg" alt="Индия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/india-4.jpg" alt="Индия"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
