--- a/_dev/tmpl/indonesia-tour.html
+++ b/_dev/tmpl/indonesia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/indonesia-1.jpg" alt="Индонезия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/indonesia-2.jpg" alt="Индонезия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/indonesia-3.jpg" alt="Индонезия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/indonesia-4.jpg" alt="Индонезия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/indonesia-1.jpg" alt="Индонезия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/indonesia-2.jpg" alt="Индонезия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/indonesia-3.jpg" alt="Индонезия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/indonesia-4.jpg" alt="Индонезия"></div>
 
         </div>
         <div class="row">
