--- a/_dev/tmpl/kaliningrad-tour.html
+++ b/_dev/tmpl/kaliningrad-tour.html
@@ -37,7 +37,7 @@
                     на&nbsp;самолете из&nbsp;Санкт-Петербурга: SU&nbsp;6323
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/kaliningrad.jpg" alt="Экскурсионные туры в Калининград"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/kaliningrad.jpg" alt="Экскурсионные туры в Калининград"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
