--- a/_dev/tmpl/kareliya-tour.html
+++ b/_dev/tmpl/kareliya-tour.html
@@ -28,7 +28,7 @@
                     Карелия — поистине сказочный уголок, в котором Вас ожидает комфортный семейный и детский отдых. Мы предлагает Вам интереснейшие туры в города Карелии – Беломорск, Пудож, Медвежьегорск и другие. Популярны для посещения такие места, как остров Кижи, Валаам, архипелаг Соловки. Мы предлагаем путевки в пансионаты, гостиницы, дома отдыха, турбазы и санатории на любой вкус. Отправившись на отдых в Карелию, Вас ждут красивейшие озера Карелии, рыбалка, реки Карелии, марциальные воды, водопад Кивач. Особенно мы рекомендуем Вам такие туры, как экскурсии «Белые ночи в Карелии», санаториях «Дворцы» и «Маски», отдых в «Деревне Александровка».
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/kareliya.jpg" alt="Экскурсионные туры по Москве"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/kareliya.jpg" alt="Экскурсионные туры по Москве"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
