--- a/_dev/tmpl/kazahstan-tour.html
+++ b/_dev/tmpl/kazahstan-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/kazahstan-1.jpg" alt="Казахстан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kazahstan-2.jpg" alt="Казахстан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kazahstan-3.jpg" alt="Казахстан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kazahstan-4.jpg" alt="Казахстан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kazahstan-1.jpg" alt="Казахстан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kazahstan-2.jpg" alt="Казахстан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kazahstan-3.jpg" alt="Казахстан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kazahstan-4.jpg" alt="Казахстан"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
