--- a/_dev/tmpl/kazan-tour.html
+++ b/_dev/tmpl/kazan-tour.html
@@ -25,11 +25,10 @@
 
         <div class="row">
             <div class="col-md-6 col-xs-12">
-                <img src="img/kazan-2.jpg" alt="Экскурсионные туры в Казань">
+                <img src="/img/kazan-2.jpg" alt="Экскурсионные туры в Казань">
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/kazan-3.jpg" alt="Казань"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/kazan-3.jpg" alt="Казань"></div>
         </div>
-
         <div class="row">
             <div class="col-md-12">
                 <table>
