--- a/_dev/tmpl/kirgizia-tour.html
+++ b/_dev/tmpl/kirgizia-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/kirgizia-1.jpg" alt="Киргизия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kirgizia-2.jpg" alt="Киргизия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kirgizia-3.jpg" alt="Киргизия"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/kirgizia-4.jpg" alt="Киргизия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kirgizia-1.jpg" alt="Киргизия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kirgizia-2.jpg" alt="Киргизия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kirgizia-3.jpg" alt="Киргизия"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/kirgizia-4.jpg" alt="Киргизия"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
