--- a/_dev/tmpl/krim-tour.html
+++ b/_dev/tmpl/krim-tour.html
@@ -31,7 +31,7 @@
                     Специально для Вас мы&nbsp;подобрали самые лучшие предложения, что&nbsp;бы Вы&nbsp;смогли увидеть все красоты Крыма.
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/krim.jpg" alt="Экскурсионные туры в Крым"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/krim.jpg" alt="Экскурсионные туры в Крым"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
