--- a/_dev/tmpl/kuba-tour.html
+++ b/_dev/tmpl/kuba-tour.html
@@ -23,9 +23,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-xs-12"><img src="img/kuba-1.jpg" alt="Куба"></div>
-            <div class="col-md-4 col-xs-12"><img src="img/kuba-2.jpg" alt="Куба"></div>
-            <div class="col-md-4 col-xs-12"><img src="img/kuba-3.jpg" alt="Куба"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/kuba-1.jpg" alt="Куба"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/kuba-2.jpg" alt="Куба"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/kuba-3.jpg" alt="Куба"></div>
 
         </div>
         <div class="row">
