--- a/_dev/tmpl/meksika-tour.html
+++ b/_dev/tmpl/meksika-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/meksika-1.jpg" alt="Мексика"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/meksika-2.jpg" alt="Мексика"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/meksika-3.jpg" alt="Мексика"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/meksika-5.jpg" alt="Мексика"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/meksika-1.jpg" alt="Мексика"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/meksika-2.jpg" alt="Мексика"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/meksika-3.jpg" alt="Мексика"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/meksika-5.jpg" alt="Мексика"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
