--- a/_dev/tmpl/moscow-tour.html
+++ b/_dev/tmpl/moscow-tour.html
@@ -28,7 +28,7 @@
                     Москва&nbsp;&mdash; самый важный город Российской Федерации, является нашей столицей. Расположен город на&nbsp;Москве реке, является основной транспортной развязкой России.
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/moscow.jpg" alt="Экскурсионные туры по Москве"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/moscow.jpg" alt="Экскурсионные туры по Москве"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
