--- a/_dev/tmpl/oae-tour.html
+++ b/_dev/tmpl/oae-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/oae-1.jpg" alt="ОАЭ"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/oae-2.jpg" alt="ОАЭ"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/oae-3.jpg" alt="ОАЭ"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/oae-4.jpg" alt="ОАЭ"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/oae-1.jpg" alt="ОАЭ"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/oae-2.jpg" alt="ОАЭ"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/oae-3.jpg" alt="ОАЭ"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/oae-4.jpg" alt="ОАЭ"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
