--- a/_dev/tmpl/perm-tour.html
+++ b/_dev/tmpl/perm-tour.html
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 col-xs-12">
-               <img src="img/perm-tour.jpg" alt="Пермский край">
+               <img src="/img/perm-tour.jpg" alt="Пермский край">
             </div>
         </div>
         <div class="row">
