--- a/_dev/tmpl/peter-tour.html
+++ b/_dev/tmpl/peter-tour.html
@@ -28,7 +28,7 @@
                     Санкт Петербург считается одним из&nbsp;самых красивых городов Мира. Сюда съезжаются туристы со&nbsp;всего Мира, что&nbsp;бы полюбоваться архитектурами, памятниками, музеями. И&nbsp;мы&nbsp;Вам рекомендуем посетить этот удивительный город, прикоснуться к&nbsp;его истории. Специально для Вас мы&nbsp;подобрали самое лучшее.
                 </p>
             </div>
-            <div class="col-md-6 col-xs-12"><img src="img/peter.jpg" alt="Экскурсионные туры по Питеру"></div>
+            <div class="col-md-6 col-xs-12"><img src="/img/peter.jpg" alt="Экскурсионные туры по Питеру"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
