--- a/_dev/tmpl/recreation.html
+++ b/_dev/tmpl/recreation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i&amp;subset=cyrillic" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="libs/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="libs/magnific.css" type="text/css">
     <link rel="stylesheet" href="css/all.css" type="text/css">
     <title>Базы отдыха Перми и Пермского края</title>
 
@@ -35,7 +36,6 @@
                 <hr class="accent-line">
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-12">
                 <p>«АШАТЛИ-ТУЛВА» ПАРК РАЗВЛЕЧЕНИЙ</p>
