--- a/_dev/tmpl/russia-tour.html
+++ b/_dev/tmpl/russia-tour.html
@@ -25,78 +25,78 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
                <a href="moscow-tour.html" class="card">
-                   <div class="card__header">
-                       <h2>Туры в Москву</h2>
-                   </div>
-                   <div class="card__body">
-                       <img src="img/moscow.jpg" alt="Туры в Москву">
-                   </div>
+                   <span class="card__header">
+                       <span>Туры в Москву</span>
+                   </span>
+                   <span class="card__body">
+                       <img src="/img/moscow.jpg" alt="Туры в Москву">
+                   </span>
                </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="peter-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Туры в Санкт-Петербург</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/peter.jpg" alt="Туры в Санкт-Петербург">
-                    </div>
+                    <span class="card__header">
+                        <span>Туры в Санкт-Петербург</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/peter.jpg" alt="Туры в Санкт-Петербург">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kazan-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Туры в Казань</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kazan.jpg" alt="Туры в Казань">
-                    </div>
+                    <span class="card__header">
+                        <span>Туры в Казань</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kazan.jpg" alt="Туры в Казань">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="krim-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Туры в Крым</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/krim.jpg" alt="Туры в Крым">
-                    </div>
+                    <span class="card__header">
+                        <span>Туры в Крым</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/krim.jpg" alt="Туры в Крым">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kaliningrad-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Туры в Калининград</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kaliningrad.jpg" alt="Туры в Калининград">
-                    </div>
+                    <span class="card__header">
+                        <span>Туры в Калининград</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kaliningrad.jpg" alt="Туры в Калининград">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="gold-ring-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Золотое кольцо</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/gold-ring.jpg" alt="Золотое кольцо">
-                    </div>
+                    <span class="card__header">
+                        <span>Золотое кольцо</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/gold-ring.jpg" alt="Золотое кольцо">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kareliya-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Туры в Карелию</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kareliya.jpg" alt="Экскурсионные туры в Карелию">
-                    </div>
+                    <span class="card__header">
+                        <span>Туры в Карелию</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kareliya.jpg" alt="Экскурсионные туры в Карелию">
+                    </span>
                 </a>
             </div>
         </div>
