--- a/_dev/tmpl/sanatorium-tour.html
+++ b/_dev/tmpl/sanatorium-tour.html
@@ -34,9 +34,9 @@
                 <p class="accent">Санаторий «Демидково»</p>
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/dem-1.jpg" alt="Санаторий «Демидково»">
+                        <img src="/img/dem-1.jpg" alt="Санаторий «Демидково»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/dem-2.jpg" alt="Санаторий «Демидково»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/dem-2.jpg" alt="Санаторий «Демидково»"></p></div>
                 </div>
                 <p>Расположился не далеко от города, всего в 40 км от города. Имеет красивую, ухоженную зеленую территорию. Расположен санаторий в живописном месте,  в сосновом бору на берегу реки Кама.</p>
                 <p>Размещаются отдыхающие в корпусах и гостевых домах. Категории номеров: одноместные, двухместный, студии, сюиты, люксы.</p>
@@ -70,9 +70,9 @@
 
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/ust-1.jpg" alt="Санаторий «Усть-Качка»">
+                        <img src="/img/ust-1.jpg" alt="Санаторий «Усть-Качка»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/ust-2.jpg" alt="Санаторий «Усть-Качка»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/ust-2.jpg" alt="Санаторий «Усть-Качка»"></p></div>
                 </div>
 
                 <p>Расположен не далеко от города, в 40-45 км. Расположился курорт в живописном месте, на берегу реки Кама. Санаторий имеет 7 корпусов (Прикамские Нивы, Кама, Уральский, Русь, Европейский, Малахит, Славянский).</p>
@@ -511,9 +511,9 @@
 
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/yr-1.jpg" alt="Санаторий «Красный Яр»">
+                        <img src="/img/yr-1.jpg" alt="Санаторий «Красный Яр»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/yr-2.jpg" alt="Санаторий «Красный Яр»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/yr-2.jpg" alt="Санаторий «Красный Яр»"></p></div>
                 </div>
 
                 <p>Расположен в Кишертском районе, 160 км от города. Санаторий расположен в экологическом районе, вдали от городского шума, на берегу реки Сылва. В 2000 году присвоен статус санатория, с 2012 года присоединен к курорту «Ключи»</p>
