--- a/_dev/tmpl/school-tour.html
+++ b/_dev/tmpl/school-tour.html
@@ -29,7 +29,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/school-1.jpg" alt="Экскурсии для организованных групп и&nbsp;школьников">
+                <img src="/img/school-1.jpg" alt="Экскурсии для организованных групп и&nbsp;школьников">
             </div>
         </div>
     </div>
