--- a/_dev/tmpl/srilanka-tour.html
+++ b/_dev/tmpl/srilanka-tour.html
@@ -23,9 +23,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-xs-12"><img src="img/sri-lanka-1.jpg" alt="Шри-Ланка"></div>
-            <div class="col-md-4 col-xs-12"><img src="img/sri-lanka-2.jpg" alt="Шри-Ланка"></div>
-            <div class="col-md-4 col-xs-12"><img src="img/sri-lanka-3.jpg" alt="Шри-Ланка"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/sri-lanka-1.jpg" alt="Шри-Ланка"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/sri-lanka-2.jpg" alt="Шри-Ланка"></div>
+            <div class="col-md-4 col-xs-12"><img src="/img/sri-lanka-3.jpg" alt="Шри-Ланка"></div>
         </div>
         <div class="row">
             <div class="col-md-12">
