--- a/_dev/tmpl/tailand-tour.html
+++ b/_dev/tmpl/tailand-tour.html
@@ -23,9 +23,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-xs-6"><img src="img/tailand-1.jpg" alt="Таиланд"></div>
-            <div class="col-md-4 col-xs-6"><img src="img/tailand-2.jpg" alt="Таиланд"></div>
-            <div class="col-md-4 col-xs-6"><img src="img/tailand-3.jpg" alt="Таиланд"></div>
+            <div class="col-md-4 col-xs-6"><img src="/img/tailand-1.jpg" alt="Таиланд"></div>
+            <div class="col-md-4 col-xs-6"><img src="/img/tailand-2.jpg" alt="Таиланд"></div>
+            <div class="col-md-4 col-xs-6"><img src="/img/tailand-3.jpg" alt="Таиланд"></div>
 
         </div>
         <div class="row">
