--- a/_dev/tmpl/uzbekistan-tour.html
+++ b/_dev/tmpl/uzbekistan-tour.html
@@ -23,12 +23,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/uzbekistan-1.jpg" alt="Узбекистан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/uzbekistan-2.jpg" alt="Узбекистан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/uzbekistan-3.jpg" alt="Узбекистан"></div>
-            <div class="col-md-3 col-xs-6"><img src="img/uzbekistan-4.jpg" alt="Узбекистан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/uzbekistan-1.jpg" alt="Узбекистан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/uzbekistan-2.jpg" alt="Узбекистан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/uzbekistan-3.jpg" alt="Узбекистан"></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/uzbekistan-4.jpg" alt="Узбекистан"></div>
         </div>
-
         <div class="row">
             <div class="col-md-12">
                 <hr>
