--- a/_dev/tmpl/zagran-tour.html
+++ b/_dev/tmpl/zagran-tour.html
@@ -25,89 +25,89 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
                <a href="azerbadjan-tour.html" class="card">
-                   <div class="card__header">
-                       <h2>Азербайджан</h2>
-                   </div>
-                   <div class="card__body">
-                       <img src="img/azerbadjan.jpg" alt="Азербайджан">
-                   </div>
+                   <span class="card__header">
+                       <span>Азербайджан</span>
+                   </span>
+                   <span class="card__body">
+                       <img src="/img/azerbadjan.jpg" alt="Азербайджан">
+                   </span>
                </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="armenia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Армения</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/armenia.jpg" alt="Армения">
-                    </div>
+                    <span class="card__header">
+                        <span>Армения</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/armenia.jpg" alt="Армения">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="belarussia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Белоруссия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/belarussia.jpg" alt="Белоруссия">
-                    </div>
+                    <span class="card__header">
+                        <span>Белоруссия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/belarussia.jpg" alt="Белоруссия">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kazahstan-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Казахстан</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kazahstan.jpg" alt="Казахстан">
-                    </div>
+                    <span class="card__header">
+                        <span>Казахстан</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kazahstan.jpg" alt="Казахстан">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kirgizia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Киргизия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kirgizia.jpg" alt="Киргизия">
-                    </div>
+                    <span class="card__header">
+                        <span>Киргизия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kirgizia.jpg" alt="Киргизия">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="uzbekistan-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Узбекистан</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/uzbekistan.jpg" alt="Узбекистан">
-                    </div>
+                    <span class="card__header">
+                        <span>Узбекистан</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/uzbekistan.jpg" alt="Узбекистан">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="abhazia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Абхазия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/abhazia.jpg" alt="Абхазия">
-                    </div>
+                    <span class="card__header">
+                        <span>Абхазия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/abhazia.jpg" alt="Абхазия">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="georgia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Грузия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/georgia.jpg" alt="Грузия">
-                    </div>
+                    <span class="card__header">
+                        <span>Грузия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/georgia.jpg" alt="Грузия">
+                    </span>
                 </a>
             </div>
         </div>
@@ -121,42 +121,42 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="tailand-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Таиланд</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/tailand.jpg" alt="Таиланд">
-                    </div>
+                    <span class="card__header">
+                        <span>Таиланд</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/tailand.jpg" alt="Таиланд">
+                    </span>
                 </a>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="vietnam-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Вьетнам</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/vietnam.jpg" alt="Вьетнам">
-                    </div>
+                    <span class="card__header">
+                        <span>Вьетнам</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/vietnam.jpg" alt="Вьетнам">
+                    </span>
                 </a>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="india-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Индия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/india.jpg" alt="Индия">
-                    </div>
+                    <span class="card__header">
+                        <span>Индия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/india.jpg" alt="Индия">
+                    </span>
                 </a>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="indonesia-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Индонезия</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/indonesia.jpg" alt="Индонезия">
-                    </div>
+                    <span class="card__header">
+                        <span>Индонезия</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/indonesia.jpg" alt="Индонезия">
+                    </span>
                 </a>
             </div>
         </div>
@@ -169,55 +169,55 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="srilanka-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Шри-Ланка</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/sri-lanka.jpg" alt="Шри-Ланка">
-                    </div>
+                    <span class="card__header">
+                        <span>Шри-Ланка</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/sri-lanka.jpg" alt="Шри-Ланка">
+                    </span>
                 </a>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="kuba-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Куба</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/kuba.jpg" alt="Куба">
-                    </div>
+                    <span class="card__header">
+                        <span>Куба</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/kuba.jpg" alt="Куба">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="meksika-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Мексика</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/meksika.jpg" alt="Мексика">
-                    </div>
+                    <span class="card__header">
+                        <span>Мексика</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/meksika.jpg" alt="Мексика">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="dominikana-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>Доминикана</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/dominikana.jpg" alt="Доминикана">
-                    </div>
+                    <span class="card__header">
+                        <span>Доминикана</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/dominikana.jpg" alt="Доминикана">
+                    </span>
                 </a>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="oae-tour.html" class="card">
-                    <div class="card__header">
-                        <h2>ОАЭ</h2>
-                    </div>
-                    <div class="card__body">
-                        <img src="img/oae.jpg" alt="ОАЭ">
-                    </div>
+                    <span class="card__header">
+                        <span>ОАЭ</span>
+                    </span>
+                    <span class="card__body">
+                        <img src="/img/oae.jpg" alt="ОАЭ">
+                    </span>
                 </a>
             </div>
         </div>
