--- a/_dev/tmpl/bus-tour.html
+++ b/_dev/tmpl/bus-tour.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/img-1.jpg" alt="Автобусные туры по&nbsp;Европе">
+                <img src="/img/img-1.jpg" alt="Автобусные туры по&nbsp;Европе">
             </div>
         </div>
         <div class="row">
