--- a/_dev/tmpl/raint-ship.html
+++ b/_dev/tmpl/raint-ship.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-12"><hr></div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/tpl-1.jpg" alt="Аренда теплоходов в Перми">
+                <img src="/img/tpl-1.jpg" alt="Аренда теплоходов в Перми">
             </div>
             <div class="col-md-6 col-xs-12">
                 <p>
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-md-12"><hr></div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/tpl-2.jpg" alt="Аренда теплоходов в Перми">
+                <img src="/img/tpl-2.jpg" alt="Аренда теплоходов в Перми">
             </div>
             <div class="col-md-6 col-xs-12">
                 <p>
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-md-12"><hr></div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/tpl-3.jpg" alt="Аренда теплоходов в Перми">
+                <img src="/img/tpl-3.jpg" alt="Аренда теплоходов в Перми">
             </div>
             <div class="col-md-6 col-xs-12">
                 <p>
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-12"><hr></div>
             <div class="col-md-6 col-xs-12">
-                <img src="img/tpl-4.jpg" alt="Аренда теплоходов в Перми">
+                <img src="/img/tpl-4.jpg" alt="Аренда теплоходов в Перми">
             </div>
             <div class="col-md-6 col-xs-12">
                 <p>
