--- a/_dev/tmpl/vietnam-tour.html
+++ b/_dev/tmpl/vietnam-tour.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-xs-6"><img src="img/vietnam-1.jpg" alt="Вьетнам "></div>
-            <div class="col-md-3 col-xs-6"><img src="img/vietnam-2.jpg" alt="Вьетнам "></div>
-            <div class="col-md-3 col-xs-6"><img src="img/vietnam-3.jpg" alt="Вьетнам "></div>
-            <div class="col-md-3 col-xs-6"><img src="img/vietnam-4.jpg" alt="Вьетнам "></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/vietnam-1.jpg" alt="Вьетнам "></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/vietnam-2.jpg" alt="Вьетнам "></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/vietnam-3.jpg" alt="Вьетнам "></div>
+            <div class="col-md-3 col-xs-6"><img src="/img/vietnam-4.jpg" alt="Вьетнам "></div>
         </div>
         <div class="row">
             <div class="col-md-12">
