--- a/public/sanatorium-tour.html
+++ b/public/sanatorium-tour.html
@@ -48,7 +48,25 @@
                     </div>
                     <div class="header__item hide-tablet">
                         <div class="header__btn hide-mobile">
-                            <a href="#" class="btn btn-action">Позвонить нам</a>
+                            <a href="#form-popup" class="btn btn-action js-open-popup">Позвонить нам</a>
+                        </div>
+                        <div id="form-popup" class="form-popup mfp-hide">
+                            <h3 class="form-popup__title">Оставьте телефон, и мы перезвоним вам:</h3>
+                            <form id="popup-form" class="popup-form">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-unit form-unit_w100">
+                                            <input type="text" name="fio" class="inp-regular" placeholder="Ваше имя" required>
+                                        </div>
+                                        <div class="form-unit form-unit_w100">
+                                            <input type="tel" name="phone" class="inp-regular" placeholder="Ваш телефон" required>
+                                        </div>
+                                        <div class="form-unit form-unit_w100">
+                                            <button class="btn btn-action btn_w-100" type="submit">Перезвонить</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -62,15 +80,16 @@
         <div class="row">
 
             <div class="col-md-11 col-sm-11 hide-mobile">
-                <nav class="top-nav">
-                    <a href="/" class="top-nav__link">Главная</a>
-                    <a href="about.html" class="top-nav__link">О&nbsp;компании</a>
-                    <a href="zagran-tour.html" class="top-nav__link">Отдых зарубежом</a>
-                    <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
-                    <a href="reviews.html" class="top-nav__link">Отзывы</a>
-                    <a href="stock.html" class="top-nav__link">Акции</a>
-                    <a href="contact.html" class="top-nav__link">Контакты</a>
-
+                <nav id="main-nav">
+                    <ul class="top-nav">
+                        <li><a href="/">Главная</a></li>
+                        <li><a href="about.html">О&nbsp;компании</a></li>
+                        <li><a href="zagran-tour.html">Отдых зарубежом</a></li>
+                        <li><a href="russia-tour.html">Отдых в&nbsp;России</a></li>
+                        <li><a href="reviews.html">Отзывы</a></li>
+                        <li><a href="stock.html">Акции</a></li>
+                        <li><a href="contact.html">Контакты</a></li>
+                    </ul>
                 </nav>
             </div>
             <div class="col-md-1 col-sm-1 hide-tablet">
@@ -81,9 +100,9 @@
                         </svg>
                     </a>
                     <!--<a href="#">-->
-                        <!--<svg xmlns="http://www.w3.org/2000/svg" class="ico-ui">-->
-                            <!--<use xlink:href="img/sprite.svg#facebook"></use>-->
-                        <!--</svg>-->
+                    <!--<svg xmlns="http://www.w3.org/2000/svg" class="ico-ui">-->
+                    <!--<use xlink:href="img/sprite.svg#facebook"></use>-->
+                    <!--</svg>-->
                     <!--</a>-->
                     <a href="https://vk.com/anikatour">
                         <svg xmlns="http://www.w3.org/2000/svg" class="ico-ui">
@@ -143,9 +162,9 @@
                 <p class="accent">Санаторий «Демидково»</p>
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/dem-1.jpg" alt="Санаторий «Демидково»">
+                        <img src="/img/dem-1.jpg" alt="Санаторий «Демидково»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/dem-2.jpg" alt="Санаторий «Демидково»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/dem-2.jpg" alt="Санаторий «Демидково»"></p></div>
                 </div>
                 <p>Расположился не далеко от города, всего в 40 км от города. Имеет красивую, ухоженную зеленую территорию. Расположен санаторий в живописном месте,  в сосновом бору на берегу реки Кама.</p>
                 <p>Размещаются отдыхающие в корпусах и гостевых домах. Категории номеров: одноместные, двухместный, студии, сюиты, люксы.</p>
@@ -179,9 +198,9 @@
 
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/ust-1.jpg" alt="Санаторий «Усть-Качка»">
+                        <img src="/img/ust-1.jpg" alt="Санаторий «Усть-Качка»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/ust-2.jpg" alt="Санаторий «Усть-Качка»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/ust-2.jpg" alt="Санаторий «Усть-Качка»"></p></div>
                 </div>
 
                 <p>Расположен не далеко от города, в 40-45 км. Расположился курорт в живописном месте, на берегу реки Кама. Санаторий имеет 7 корпусов (Прикамские Нивы, Кама, Уральский, Русь, Европейский, Малахит, Славянский).</p>
@@ -620,9 +639,9 @@
 
                 <div class="row">
                     <div class="col-md-6 col-xs-12"><p>
-                        <img src="img/yr-1.jpg" alt="Санаторий «Красный Яр»">
+                        <img src="/img/yr-1.jpg" alt="Санаторий «Красный Яр»">
                     </p></div>
-                    <div class="col-md-6 col-xs-12"><p><img src="img/yr-2.jpg" alt="Санаторий «Красный Яр»"></p></div>
+                    <div class="col-md-6 col-xs-12"><p><img src="/img/yr-2.jpg" alt="Санаторий «Красный Яр»"></p></div>
                 </div>
 
                 <p>Расположен в Кишертском районе, 160 км от города. Санаторий расположен в экологическом районе, вдали от городского шума, на берегу реки Сылва. В 2000 году присвоен статус санатория, с 2012 года присоединен к курорту «Ключи»</p>
@@ -945,6 +964,7 @@
 
 <script src="libs/jquery.js"></script>
 <script src="libs/swiper.jquery.min.js"></script>
+<script src="libs/magnific.min.js"></script>
 <script src="libs/parallax.min.js"></script>
 <script src="js/main.js"></script>
 
